# utom_dramatiq

./: .env.template  .gitignore  README.md  api.py  app.py  bitcoin_video_test.py  create_bucket.py  database.py  docker-compose.yml  init_db.py  metadata_utils.py  models.py  mongodb_utils.py  package.json  requirements.txt  s3_operations.py  test_core_functionality.py  test_end_to_end.py  test_mongo_integration.py  test_mongodb.py  test_mongodb_integration.py  test_upload.py  verify_bucket_access.py  video_processor.py  workers.py
utom_databases/: .gitignore  pyproject.toml
utom_databases/functions/: __init__.py  cassandra_utils.py  elastic_search_utils.py  mongo_utils.py  rabbitmq_utils.py  redis_utils.py
utom_databases/wikis/: Create Cassandra Server.md  Create Elastic Search Server.md  Create Mongo Server.md  Create RabbitMQ Server.md  Create Redis Server.md
utom_feature/: .gitignore  app.py  design_brief_example.txt  env_utils.py  example_feature.txt  initial_feature_metadata.txt  pyproject.toml  requirements.txt  test_pipeline.py  utils.py  video_utils.py
utom_feature/Scripts/: ConversationBuilderSandbox.ipynb  GoogleMapsApiSearch.ipynb  Sandbox.ipynb  ex_ex_steps.txt  ex_feature_metadata.txt  ex_pages_metadata.txt  ex_project_metadata.txt  ex_screen_brief.txt  ex_user_flow.txt  example_formatting_issue.txt  example_page_metadata.txt  setup_aws_infrastructure.py
utom_feature/functions/: dramatiq_task_sender_funcs.py  example_dramatiq_app.py  example_dramatiq_task_sender_funcs.py  feature_creation.py  ideas.txt  (+5 more)
utom_utils/: __init__.py  pyproject.toml
(+30 files in other folders)
