[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utom_databases"
version = "0.1.0"
description = "Database utilities for Utom AI projects"
authors = [
    { name = "Utom AI" }
]
requires-python = ">=3.8"
dependencies = [
    "pymongo>=4.6.0",
    "pika>=1.3.0",
    "redis>=5.0.0",
    "requests>=2.31.0"
]

[tool.hatch.build.targets.wheel]
packages = ["functions"] 