[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utom_utils"
version = "0.1.0"
description = "Utility functions for Utom AI projects"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[tool.hatch.build.targets.wheel]
packages = ["functions"] 